--- a/Digit_Recognition.ipynb
+++ b/Digit_Recognition.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMppkRF+7JUIrvjmlruSMh",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyNVqNtNk6jT9ijapYpTYsQC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -27,13 +29,351 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Digit Recognition**"
+      ],
+      "metadata": {
+        "id": "6AWO5pNidXak"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install tensorflow # install package"
+      ],
+      "metadata": {
+        "id": "MDYb92_GkvNj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Import Packages"
+      ],
+      "metadata": {
+        "id": "_t5LtObBSNuF"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "vJkV8c8Xc4bx"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import tensorflow as tf #\n",
+        "from tensorflow import keras\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from tensorflow.keras.datasets import mnist\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout, Flatten\n",
+        "from tensorflow.keras import datasets, layers, models\n",
+        "from tensorflow.keras.utils import to_categorical\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Dense, Flatten, Dropout"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Load data"
+      ],
+      "metadata": {
+        "id": "ITf_jspBSXDu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(X_train, y_train), (X_test, y_test) = mnist.load_data() # data Load"
+      ],
+      "metadata": {
+        "id": "SKapDorQdrbC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.matshow(X_train[0]) # image view"
+      ],
+      "metadata": {
+        "id": "ljIDqzLTlHde"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train.shape"
+      ],
+      "metadata": {
+        "id": "dCpYr2CRdyQ8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train"
+      ],
+      "metadata": {
+        "id": "WPEw8io8d-vT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.matshow(X_train[1])"
+      ],
+      "metadata": {
+        "id": "QDKeqsZ_eTxO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train = X_train/255 # normalize the data\n",
+        "X_test = X_test/25"
+      ],
+      "metadata": {
+        "id": "aPCsrsngejcB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train[0]"
+      ],
+      "metadata": {
+        "id": "3zHM0DZLfB_P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Model Training"
+      ],
+      "metadata": {
+        "id": "HcAjv0xRSzAu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# CNN Model architecture\n",
+        "model = models.Sequential()\n",
+        "model.add(layers.Conv2D(32, kernel_size=(3, 3), activation='relu', input_shape=(28, 28, 1)))\n",
+        "model.add(layers.MaxPooling2D(pool_size=(2, 2)))\n",
+        "model.add(layers.Conv2D(64, kernel_size=(3, 3), activation='relu'))\n",
+        "model.add(layers.MaxPooling2D(pool_size=(2, 2)))\n",
+        "model.add(layers.Flatten())\n",
+        "model.add(layers.Dense(128, activation='relu'))\n",
+        "model.add(layers.Dense(10, activation='softmax'))\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "D71TAsmepFyy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy']) # model compile"
+      ],
+      "metadata": {
+        "id": "BGBlNu0hgClJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history = model.fit(X_train, y_train, epochs=10,validation_split=0.2) # model fit"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pQcyclLUgWx8",
+        "outputId": "e6983556-7b3c-4d9f-c7e3-fbe5bd80301d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m88s\u001b[0m 58ms/step - accuracy: 0.8974 - loss: 0.3410 - val_accuracy: 0.9848 - val_loss: 0.0579\n",
+            "Epoch 2/10\n",
+            "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m77s\u001b[0m 51ms/step - accuracy: 0.9852 - loss: 0.0469 - val_accuracy: 0.9874 - val_loss: 0.0428\n",
+            "Epoch 3/10\n",
+            "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 34ms/step - accuracy: 0.9911 - loss: 0.0283 - val_accuracy: 0.9870 - val_loss: 0.0465\n",
+            "Epoch 4/10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save the entire model to a file\n",
+        "model.save('/content/sample_data/model.h5')\n"
+      ],
+      "metadata": {
+        "id": "I2w08hpP4nD3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Evaluate the model\n",
+        "test_loss, test_accuracy = model.evaluate(X_test, y_test)\n",
+        "print(f\"Accuracy on test data: {test_accuracy*100:.2f}%\")"
+      ],
+      "metadata": {
+        "id": "-xdabhAQlyOc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_prob = model.predict(X_test) # model predict"
+      ],
+      "metadata": {
+        "id": "FVZ1vBW1g67-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = y_prob.argmax(axis=-1) # model predict"
+      ],
+      "metadata": {
+        "id": "9KfoCx3XhV1x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "accuracy_score(y_test, y_pred) # model accuracy"
+      ],
+      "metadata": {
+        "id": "pfa9aF3nhpDV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plot accuracy and loss graphs\n",
+        "plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
+        "plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
+        "plt.title('Model Accuracy')\n",
+        "plt.xlabel('Epoch')\n",
+        "plt.ylabel('Accuracy')\n",
+        "plt.legend(loc='lower right')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "sCVZytwNhuDn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.plot(history.history['loss'], label='Train Loss')\n",
+        "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+        "plt.title('Model Loss')\n",
+        "plt.xlabel('Epoch')\n",
+        "plt.ylabel('Loss')\n",
+        "plt.legend(loc='upper right')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "gL7wL1lgj5Nd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Confusion Matrix\n",
+        "y_pred = model.predict(X_test).argmax(axis=1)\n",
+        "cm = tf.math.confusion_matrix(y_test, y_pred)\n",
+        "plt.figure(figsize=(10, 7))\n",
+        "sns.heatmap(cm, annot=True, fmt='d')\n",
+        "plt.xlabel('Predicted')\n",
+        "plt.ylabel('True')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "9dNmcFg2uziT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test a prediction\n",
+        "plt.matshow(X_test[1].reshape(28, 28), cmap='gray')\n",
+        "predicted_label = model.predict(X_test[1].reshape(1, 28, 28)).argmax(axis=1)\n",
+        "print(f\"Predicted label: {predicted_label}\")"
+      ],
+      "metadata": {
+        "id": "MJzSQX__u9k7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test a prediction\n",
+        "plt.matshow(X_test[6].reshape(28, 28), cmap='gray')\n",
+        "predicted_label = model.predict(X_test[6].reshape(1, 28, 28)).argmax(axis=1)\n",
+        "print(f\"Predicted label: {predicted_label}\")"
+      ],
+      "metadata": {
+        "id": "lwUGU1_3vFFQ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
